--- a/tema09/actividad4/bootstrap4.html
+++ b/tema09/actividad4/bootstrap4.html
@@ -15,7 +15,7 @@
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Electric Shop</a>
+            <a class="navbar-brand" href="#"><i class="fa-solid fa-bolt-lightning"></i> Electric Shop</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -55,54 +55,76 @@
     </nav>
 
     <!-- carrusel -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                aria-label="Slide 5"></button>
+    <div class="container w-75 text-center">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="slide1.jpg" class="d-block w-100" alt="img1">
+                </div>
+                <div class="carousel-item">
+                    <img src="slide2.jpg" class="d-block w-100" alt="img2">
+                </div>
+                <div class="carousel-item">
+                    <img src="slide3.jpg" class="d-block w-100" alt="img3">
+                </div>
+                <div class="carousel-item">
+                    <img src="slide4.jpg" class="d-block w-100" alt="img4">
+                </div>
+                <div class="carousel-item">
+                    <img src="slide5.jpg" class="d-block w-100" alt="im5">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="slide1.jpg" class="d-block w-100" alt="img1">
+        <!-- Cuerpo -->
+        <div class=" row text-secondary my-5 mx-3 d-flex">
+            <div class="col-12">
+                <h1>Profesionales eléctricos a su servicio</h1>
             </div>
-            <div class="carousel-item">
-                <img src="slide2.jpg" class="d-block w-100" alt="img2">
+            <div class="col-12">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias at provident ut impedit iusto explicabo ab optio labore possimus excepturi rerum autem distinctio neque voluptatum delectus eveniet ipsam placeat, harum nulla reiciendis expedita asperiores aperiam numquam veritatis. Soluta recusandae illo dignissimos blanditiis, voluptatibus accusamus vel esse numquam reprehenderit provident vitae possimus illum quibusdam quo? Ea saepe voluptatum fugiat facilis, ipsa, impedit qui itaque, minus odio nam distinctio odit. Veritatis, repudiandae iure? Amet voluptates ea aliquam, dolorem quia necessitatibus nisi aliquid alias accusamus enim optio illum laborum voluptatem ex nemo a nam adipisci, quis natus provident dolore? Quisquam doloremque numquam ducimus autem, veritatis corrupti ea maxime fugit laboriosam illum assumenda nesciunt cumque, mollitia cupiditate corporis? Commodi atque sint, soluta deserunt iusto tempora porro quibusdam perferendis, tenetur officiis necessitatibus aperiam repellendus itaque nulla mollitia, nostrum ipsam voluptas quas perspiciatis deleniti incidunt! Exercitationem repellendus illo esse sequi est fuga delectus nesciunt, incidunt ipsam saepe. Architecto, cumque voluptatem esse tempore numquam quidem nihil velit perferendis necessitatibus corrupti consequatur totam! Ratione ad sint natus eaque eligendi eum, modi qui atque fugit fuga dolorum maiores accusamus soluta.</p>
             </div>
-            <div class="carousel-item">
-                <img src="slide3.jpg" class="d-block w-100" alt="img3">
-            </div>
-            <div class="carousel-item">
-                <img src="slide4.jpg" class="d-block w-100" alt="img4">
-            </div>
-            <div class="carousel-item">
-                <img src="slide5.jpg" class="d-block w-100" alt="im5">
+            <div class="col-12 d-flex justify-content-between mt-5">
+                    <div class="bg-secondary text-white fa-8x rounded-circle px-5">
+                        <i class="fa-regular fa-lightbulb"></i>
+                    </div>
+        
+                    <div class="bg-secondary text-white fa-8x rounded-circle px-3">
+                        <i class="fa-solid fa-users"></i>
+                    </div>
+                    <div class="bg-secondary text-white fa-8x rounded-circle px-4">
+                        <i class="fa-solid fa-phone"></i>
+                    </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
 
-    <!-- Cuerpo -->
+    <!-- Footer -->
 
-    <main class="text-secondary my-5 mx-3">
-        <h1>Profesionales eléctricos a su servicio</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias at provident ut impedit iusto explicabo ab optio labore possimus excepturi rerum autem distinctio neque voluptatum delectus eveniet ipsam placeat, harum nulla reiciendis expedita asperiores aperiam numquam veritatis. Soluta recusandae illo dignissimos blanditiis, voluptatibus accusamus vel esse numquam reprehenderit provident vitae possimus illum quibusdam quo? Ea saepe voluptatum fugiat facilis, ipsa, impedit qui itaque, minus odio nam distinctio odit. Veritatis, repudiandae iure? Amet voluptates ea aliquam, dolorem quia necessitatibus nisi aliquid alias accusamus enim optio illum laborum voluptatem ex nemo a nam adipisci, quis natus provident dolore? Quisquam doloremque numquam ducimus autem, veritatis corrupti ea maxime fugit laboriosam illum assumenda nesciunt cumque, mollitia cupiditate corporis? Commodi atque sint, soluta deserunt iusto tempora porro quibusdam perferendis, tenetur officiis necessitatibus aperiam repellendus itaque nulla mollitia, nostrum ipsam voluptas quas perspiciatis deleniti incidunt! Exercitationem repellendus illo esse sequi est fuga delectus nesciunt, incidunt ipsam saepe. Architecto, cumque voluptatem esse tempore numquam quidem nihil velit perferendis necessitatibus corrupti consequatur totam! Ratione ad sint natus eaque eligendi eum, modi qui atque fugit fuga dolorum maiores accusamus soluta.</p>
-    </main>
+    <footer class="bg-dark text-light text-center py-3">
+        <p> 2019 - Todos los derechos reservados - <i class="fa-regular fa-registered"></i> </p>
+    </footer>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
