--- a/tema09/actividad4/bootstrap4.html
+++ b/tema09/actividad4/bootstrap4.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/9cfe8b4c32.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="background-color: lightgray;">
 
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,7 +21,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarScroll">
-                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <ul class="navbar-nav me-auto my-2 my-lg-0" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     </li>
@@ -47,77 +47,105 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-light" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <input class="form-control me-2 w-auto" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-light" type="submit"><i
+                            class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
             </div>
         </div>
     </nav>
 
     <!-- carrusel -->
-    <div class="container w-75 text-center">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button>
+    <div class="container">
+        <div class="row">
+            <div id="carouselExampleIndicators" class="carousel slide p-0" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="slide1.jpg" class="d-block w-100" alt="img1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="slide2.jpg" class="d-block w-100" alt="img2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="slide3.jpg" class="d-block w-100" alt="img3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="slide4.jpg" class="d-block w-100" alt="img4">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="slide5.jpg" class="d-block w-100" alt="im5">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="slide1.jpg" class="d-block w-100" alt="img1">
-                </div>
-                <div class="carousel-item">
-                    <img src="slide2.jpg" class="d-block w-100" alt="img2">
-                </div>
-                <div class="carousel-item">
-                    <img src="slide3.jpg" class="d-block w-100" alt="img3">
-                </div>
-                <div class="carousel-item">
-                    <img src="slide4.jpg" class="d-block w-100" alt="img4">
-                </div>
-                <div class="carousel-item">
-                    <img src="slide5.jpg" class="d-block w-100" alt="im5">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
         <!-- Cuerpo -->
-        <div class=" row text-secondary my-5 mx-3 d-flex">
-            <div class="col-12">
-                <h1>Profesionales eléctricos a su servicio</h1>
+
+        <section class="row p-4 fs-4 bg-white">
+            <h2 class="fa-3x">Profesionales eléctricos a su servicio</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, animi illum? Asperiores veniam quas
+                perferendis. Aperiam molestias repellendus quas harum dicta libero modi corrupti numquam fugiat
+                explicabo cupiditate, inventore, earum ipsam, dignissimos optio consequuntur debitis nihil beatae
+                nostrum soluta itaque.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, doloremque. Nostrum consequuntur eius
+                enim libero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, sequi?</p>
+        </section>
+
+        <!-- Iconos -->
+        <section class="row fs-5">
+            <div class="col-lg-4 col-md-12 bg-white p-3">
+                <i class="fa-regular fa-lightbulb rounded-circle bg-dark d-flex align-items-center justify-content-center  fa-3x mx-auto text-white mb-3"
+                    style="width: 180px; height:180px;"></i>
+                <h2 class="text-center">Iluminación</h2>
+                <p style="text-align: justify;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tenetur
+                    ullam nobis obcaecati, perspiciatis iure laboriosam eveniet quasi eligendi, error tempore
+                    reprehenderit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, distinctio!</p>
             </div>
-            <div class="col-12">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias at provident ut impedit iusto explicabo ab optio labore possimus excepturi rerum autem distinctio neque voluptatum delectus eveniet ipsam placeat, harum nulla reiciendis expedita asperiores aperiam numquam veritatis. Soluta recusandae illo dignissimos blanditiis, voluptatibus accusamus vel esse numquam reprehenderit provident vitae possimus illum quibusdam quo? Ea saepe voluptatum fugiat facilis, ipsa, impedit qui itaque, minus odio nam distinctio odit. Veritatis, repudiandae iure? Amet voluptates ea aliquam, dolorem quia necessitatibus nisi aliquid alias accusamus enim optio illum laborum voluptatem ex nemo a nam adipisci, quis natus provident dolore? Quisquam doloremque numquam ducimus autem, veritatis corrupti ea maxime fugit laboriosam illum assumenda nesciunt cumque, mollitia cupiditate corporis? Commodi atque sint, soluta deserunt iusto tempora porro quibusdam perferendis, tenetur officiis necessitatibus aperiam repellendus itaque nulla mollitia, nostrum ipsam voluptas quas perspiciatis deleniti incidunt! Exercitationem repellendus illo esse sequi est fuga delectus nesciunt, incidunt ipsam saepe. Architecto, cumque voluptatem esse tempore numquam quidem nihil velit perferendis necessitatibus corrupti consequatur totam! Ratione ad sint natus eaque eligendi eum, modi qui atque fugit fuga dolorum maiores accusamus soluta.</p>
+
+            <div class="col-lg-4 col-md-12 bg-white p-4 mt-3 mt-lg-0">
+                <i class="fa-solid fa-users rounded-circle bg-dark d-flex align-items-center justify-content-center  fa-3x mx-auto text-white mb-3"
+                    style="width: 180px; height:180px;"></i>
+                <h2 class="text-center">Profesionales</h2>
+                <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde,
+                    provident tempore maiores dicta aspernatur asperiores voluptatum! Dicta, impedit? Explicabo amet
+                    quae quos at omnis?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, fuga.</p>
             </div>
-            <div class="col-12 d-flex justify-content-between mt-5">
-                    <div class="bg-secondary text-white fa-8x rounded-circle px-5">
-                        <i class="fa-regular fa-lightbulb"></i>
-                    </div>
-        
-                    <div class="bg-secondary text-white fa-8x rounded-circle px-3">
-                        <i class="fa-solid fa-users"></i>
-                    </div>
-                    <div class="bg-secondary text-white fa-8x rounded-circle px-4">
-                        <i class="fa-solid fa-phone"></i>
-                    </div>
+
+            <div class="col-lg-4 col-md-12 bg-white p-4 mt-3 mb-3 mb-lg-0 mt-lg-0">
+                <i class="fa-solid fa-phone-flip rounded-circle bg-dark d-flex align-items-center justify-content-center fa-3x mx-auto text-white"
+                    style="width: 180px; height:180px;"></i>
+                <h2 class="text-center">Soporte Técnico</h2>
+                <p style="text-align: justify;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+                    asperiores corrupti fugiat consectetur numquam itaque obcaecati voluptatibus, unde repellat
+                    repudiandae.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, aliquam!</p>
             </div>
-        </div>
+        </section>
+
     </div>
 
     <!-- Footer -->
