--- a/tema09/actividad4/bootstrap4.html
+++ b/tema09/actividad4/bootstrap4.html
@@ -58,7 +58,7 @@
     <!-- carrusel -->
     <div class="container">
         <div class="row">
-            <div id="carouselExampleIndicators" class="carousel slide p-0" data-bs-ride="carousel">
+            <div id="carouselExampleIndicators" class="col-12 carousel slide p-0" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
@@ -103,14 +103,15 @@
         <!-- Cuerpo -->
 
         <section class="row p-4 fs-4 bg-white">
-            <h2 class="fa-3x">Profesionales eléctricos a su servicio</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, animi illum? Asperiores veniam quas
-                perferendis. Aperiam molestias repellendus quas harum dicta libero modi corrupti numquam fugiat
-                explicabo cupiditate, inventore, earum ipsam, dignissimos optio consequuntur debitis nihil beatae
-                nostrum soluta itaque.</p>
-
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, doloremque. Nostrum consequuntur eius
-                enim libero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, sequi?</p>
+            <div class="col-12">
+                <h2 class="fa-3x">Profesionales eléctricos a su servicio</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, animi illum? Asperiores veniam quas
+                    perferendis. Aperiam molestias repellendus quas harum dicta libero modi corrupti numquam fugiat
+                    explicabo cupiditate, inventore, earum ipsam, dignissimos optio consequuntur debitis nihil beatae
+                    nostrum soluta itaque.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, doloremque. Nostrum consequuntur eius
+                    enim libero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, sequi?</p>
+            </div>
         </section>
 
         <!-- Iconos -->
