--- a/proyecto2/pagina1.html
+++ b/proyecto2/pagina1.html
@@ -40,10 +40,16 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Tienda</a>
+                        <a class="nav-link" href="#" tabindex="-1" >Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
+                        <a class="nav-link" href="#" tabindex="-1" >Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" tabindex="-1" >Iniciar Sesión</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" tabindex="-1" >Registrarse</a>
                     </li>
                 </ul>
                 <form class="d-flex">
