--- a/proyecto2/login.html
+++ b/proyecto2/login.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
@@ -58,7 +58,30 @@
         </div>
     </nav>
 
+    <!-- Formulario -->
 
+    <div class="container">
+        <div class="row ">
+            <div class="col-12 d-flex justify-content-center align-items-center text-center">
+                <form class="w-75 bg-warning d-flex flex-column  align-items-center">
+                    <div class="my-3 d-flex flex-column align-items-center">
+                      <label for="exampleInputEmail1" class="form-label">Email o Nombre de Usuario</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                      <div id="emailHelp" class="form-text">El mailo el nombre de usuario deben ser válidos.</div>
+                    </div>
+                    <div class="mb-3 d-flex flex-column align-items-center">
+                      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                      <input type="password" class="form-control " id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3 form-check">
+                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                      <label class="form-check-label" for="exampleCheck1">Mantener conectado</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary my-3">Login</button>
+                  </form>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Footer -->
