--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="#" tabindex="-1" >Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" >Iniciar Sesión</a>
+                        <a class="nav-link" href="login.html" tabindex="-1" >Iniciar Sesión</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" tabindex="-1" >Registrarse</a>
