--- a/proyecto2/login.html
+++ b/proyecto2/login.html
@@ -7,8 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/9cfe8b4c32.js" crossorigin="anonymous"></script>
+    <link href="sticky-footer-navbar.css" rel="stylesheet">
 </head>
-<body>
+
+<body class="d-flex flex-column h-100">
      <!-- nav -->
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -43,9 +45,6 @@
                         <a class="nav-link" href="#" tabindex="-1" >Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" >Iniciar Sesión</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#" tabindex="-1" >Registrarse</a>
                     </li>
                 </ul>
@@ -60,34 +59,40 @@
 
     <!-- Formulario -->
 
-    <div class="container">
-        <div class="row ">
-            <div class="col-12 d-flex justify-content-center align-items-center text-center">
-                <form class="w-75 bg-warning d-flex flex-column  align-items-center">
-                    <div class="my-3 d-flex flex-column align-items-center">
-                      <label for="exampleInputEmail1" class="form-label">Email o Nombre de Usuario</label>
-                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
-                      <div id="emailHelp" class="form-text">El mailo el nombre de usuario deben ser válidos.</div>
+    <main class="flex-shrink-0">
+        <flex-shrink-0>
+            <div class="container">
+                <div class="row ">
+                    <div class="col-12 d-flex justify-content-center align-items-center text-center">
+                        <form class="w-75 bg-warning d-flex flex-column  align-items-center">
+                            <div class="my-3 d-flex flex-column align-items-center">
+                              <label for="exampleInputEmail1" class="form-label">Email o Nombre de Usuario</label>
+                              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                              <div id="emailHelp" class="form-text">El mailo el nombre de usuario deben ser válidos.</div>
+                            </div>
+                            <div class="mb-3 d-flex flex-column align-items-center">
+                              <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                              <input type="password" class="form-control " id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3 form-check">
+                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                              <label class="form-check-label" for="exampleCheck1">Mantener conectado</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary my-3">Login</button>
+                          </form>
                     </div>
-                    <div class="mb-3 d-flex flex-column align-items-center">
-                      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                      <input type="password" class="form-control " id="exampleInputPassword1">
-                    </div>
-                    <div class="mb-3 form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Mantener conectado</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary my-3">Login</button>
-                  </form>
+                </div>
             </div>
-        </div>
-    </div>
+        </flex-shrink-0>
+    </main>
 
 
     <!-- Footer -->
 
-    <footer class="bg-dark text-light text-center py-3">
-        <p> 2019 - Todos los derechos reservados - <i class="fa-regular fa-registered"></i> </p>
+    <footer class="footer  mt-auto bg-dark text-light text-center py-3">
+        <div class="container">
+            <p> 2019 - Todos los derechos reservados - <i class="fa-regular fa-registered"></i> </p>
+        </div>
     </footer>
 
 </body>
