--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="#" tabindex="-1" >Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html" tabindex="-1" >Iniciar Sesión</a>
+                        <a class="nav-link" href="login.html" tabindex="-1" >Acceso / Registro de Cuenta</a>
                     </li>
                 </ul>
                 <form class="d-flex">
