--- a/proyecto2/login.html
+++ b/proyecto2/login.html
@@ -74,7 +74,7 @@
                                     <div class="my-3 d-flex flex-column align-items-center">
                                       <label for="exampleInputEmail1" class="form-label">Email o Nombre de Usuario</label>
                                       <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
-                                      <div id="emailHelp" class="form-text">El mailo el nombre de usuario deben ser válidos.</div>
+                                      <div id="emailHelp" class="form-text">El email o el nombre de usuario deben ser válidos.</div>
                                     </div>
                                     <div class="mb-3 d-flex flex-column align-items-center">
                                       <label for="exampleInputPassword1" class="form-label">Contraseña</label>
