--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -40,10 +40,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" >Tienda</a>
+                        <a class="nav-link" href="tienda.html" tabindex="-1" >Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" >Contacto</a>
+                        <a class="nav-link" href="contacto.html" tabindex="-1" >Contacto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="login.html" tabindex="-1" >Acceso / Registro de Cuenta</a>
@@ -140,8 +140,9 @@
             </div>
 
             <div class="col-lg-4 col-md-12 bg-white p-4 mt-3 mb-3 mb-lg-0 mt-lg-0">
-                <i class="fa-solid fa-phone-flip rounded-circle bg-dark d-flex align-items-center justify-content-center fa-3x mx-auto text-white"
-                    style="width: 180px; height:180px;"></i>
+                <div class="spinner-border " style="width: 18px; height:18px;" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                </div>
                 <h2 class="text-center">Soporte Técnico</h2>
                 <p style="text-align: justify;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
                     asperiores corrupti fugiat consectetur numquam itaque obcaecati voluptatibus, unde repellat
