--- a/proyecto2/login.html
+++ b/proyecto2/login.html
@@ -40,10 +40,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" >Tienda</a>
+                        <a class="nav-link" href="tienda.html" tabindex="-1" >Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" >Contacto</a>
+                        <a class="nav-link" href="contacto.html" tabindex="-1" >Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex">
