--- a/proyecto2/tienda.html
+++ b/proyecto2/tienda.html
@@ -125,7 +125,7 @@
                                 data-bs-target="#liveToast1" id="liveToastBtn">Añadir al carrito</button>
 
                             <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-                                <div id="liveToast" class="toast d-none" role="alert" aria-live="assertive"
+                                <div id="liveToast" class="toast hide" role="alert" aria-live="assertive"
                                     aria-atomic="true">
                                     <div class="toast-header">
                                         <strong class="me-auto">Añadido correctamente</strong>
@@ -153,7 +153,7 @@
                                 data-bs-target="#liveToast2" id="liveToastBtn2">Añadir al carrito</button>
 
                             <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-                                <div id="liveToast2" class="toast d-none" role="alert" aria-live="assertive"
+                                <div id="liveToast2" class="toast hide" role="alert" aria-live="assertive"
                                     aria-atomic="true">
                                     <div class="toast-header">
                                         <strong class="me-auto">Añadido correctamente</strong>
@@ -209,5 +209,17 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
+<script>
+    // Script para mostrar el toast
+    var liveToast1 = new bootstrap.Toast(document.getElementById('liveToast'));
+    document.getElementById('liveToastBtn').addEventListener('click', function () {
+        liveToast1.show();
+    });
+
+    var liveToast2 = new bootstrap.Toast(document.getElementById('liveToast2'));
+    document.getElementById('liveToastBtn2').addEventListener('click', function () {
+        liveToast2.show();
+    });
+</script>
 
 </html>
