--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -156,7 +156,13 @@
     <!-- Footer -->
 
     <footer class="bg-dark text-light text-center py-3">
-        <p> 2019 - Todos los derechos reservados - <i class="fa-regular fa-registered"></i> </p>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">2019</div>
+                <div class="col-4">- Todos los derechos reservados -</div>
+                <div class="col-4"><i class="fa-regular fa-registered"></i></div>
+            </div>
+        </div>
     </footer>
 
 </body>
