--- a/proyecto2/login.html
+++ b/proyecto2/login.html
@@ -139,9 +139,13 @@
 
     <!-- Footer -->
 
-    <footer class="footer  mt-auto bg-dark text-light text-center py-3">
+    <footer class="bg-dark text-light text-center py-3">
         <div class="container">
-            <p> 2019 - Todos los derechos reservados - <i class="fa-regular fa-registered"></i> </p>
+            <div class="row">
+                <div class="col-4">2019</div>
+                <div class="col-4">- Todos los derechos reservados -</div>
+                <div class="col-4"><i class="fa-regular fa-registered"></i></div>
+            </div>
         </div>
     </footer>
 
