--- a/proyecto2/contacto.html
+++ b/proyecto2/contacto.html
@@ -32,7 +32,7 @@
                             Sobre Nosotros
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                            <li><a class="dropdown-item" href="#">Proyecto</a></li>
+                            <li><a class="dropdown-item" href="sobreNosotrosProyecto.html">Proyecto</a></li>
                             <li><a class="dropdown-item" href="#">Equipo</a></li>
                             <li><a class="dropdown-item" href="#">Sedes</a></li>
                         </ul>
@@ -89,9 +89,14 @@
     <footer class="bg-dark text-light text-center py-3">
         <div class="container">
             <div class="row">
-                <div class="col-4">2019</div>
-                <div class="col-4">- Todos los derechos reservados -</div>
-                <div class="col-4"><i class="fa-regular fa-registered"></i></div>
+                <div class="col-3">2019</div>
+                <div class="col-3">- Todos los derechos reservados -</div>
+                <div class="col-3">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+                <div class="col-3"><i class="fa-regular fa-registered"></i></div>
             </div>
         </div>
     </footer>
