--- a/proyecto2/tienda.html
+++ b/proyecto2/tienda.html
@@ -33,7 +33,7 @@
                             Sobre Nosotros
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                            <li><a class="dropdown-item" href="#">Proyecto</a></li>
+                            <li><a class="dropdown-item" href="sobreNosotrosProyecto.html">Proyecto</a></li>
                             <li><a class="dropdown-item" href="#">Equipo</a></li>
                             <!-- <li>
                                 <hr class="dropdown-divider">
@@ -115,7 +115,7 @@
                 <!-- Producto 1 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="imagenes/slide4.jpg" class="card-img-top" alt="Producto 1">
+                        <img src="imagenes/placaBase.jpg" class="card-img-top" alt="Producto 1">
                         <div class="card-body">
                             <h5 class="card-title">Producto 1</h5>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi unde
@@ -144,7 +144,7 @@
                 <!-- Producto 2 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="imagenes/slide5.jpg" class="card-img-top" alt="Producto 2">
+                        <img src="imagenes/ssd.jpg" class="card-img-top" alt="Producto 2">
                         <div class="card-body">
                             <h5 class="card-title">Producto 2</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ab omnis
@@ -198,9 +198,14 @@
     <footer class="bg-dark text-light text-center py-3">
         <div class="container">
             <div class="row">
-                <div class="col-4">2019</div>
-                <div class="col-4">- Todos los derechos reservados -</div>
-                <div class="col-4"><i class="fa-regular fa-registered"></i></div>
+                <div class="col-3">2019</div>
+                <div class="col-3">- Todos los derechos reservados -</div>
+                <div class="col-3">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+                <div class="col-3"><i class="fa-regular fa-registered"></i></div>
             </div>
         </div>
     </footer>
