--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -140,9 +140,8 @@
             </div>
 
             <div class="col-lg-4 col-md-12 bg-white p-4 mt-3 mb-3 mb-lg-0 mt-lg-0">
-                <div class="spinner-border " style="width: 18px; height:18px;" role="status">
-                        <span class="visually-hidden">Loading...</span>
-                </div>
+                <i class="fa-solid fa-phone-flip rounded-circle bg-dark d-flex align-items-center justify-content-center fa-3x mx-auto text-white"
+                    style="width: 180px; height:180px;"></i>
                 <h2 class="text-center">Soporte Técnico</h2>
                 <p style="text-align: justify;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
                     asperiores corrupti fugiat consectetur numquam itaque obcaecati voluptatibus, unde repellat
