--- a/proyecto2/tienda.html
+++ b/proyecto2/tienda.html
@@ -66,11 +66,6 @@
     <main class="flex-grow-1">
         <div class="container mt-4">
             <h2 class="text-center mb-4">Tienda</h2>
-            <!-- Alerta del Carrito -->
-            <div class="alert alert-success alert-dismissible fade show" role="alert" id="cartAlert">
-                Puedes añadir productos al carrito.
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
             <!-- Collapse Multi-Target -->
             <button class="btn btn-primary mb-2" type="button" data-bs-toggle="collapse"
                 data-bs-target="#filterCollapse" aria-expanded="false" aria-controls="filterCollapse">
@@ -144,7 +139,7 @@
                 <!-- Producto 2 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="imagenes/ssd.jpg" class="card-img-top" alt="Producto 2">
+                        <img src="imagenes/ssd-removebg-preview.png" class="card-img-top" alt="Producto 2">
                         <div class="card-body">
                             <h5 class="card-title">Producto 2</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ab omnis
