--- a/proyecto2/sobreNosotrosProyecto.html
+++ b/proyecto2/sobreNosotrosProyecto.html
@@ -33,8 +33,8 @@
                             Sobre Nosotros
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                            <li><a class="dropdown-item" href="#">Proyecto</a></li>
                             <li><a class="dropdown-item" href="#">Equipo</a></li>
-                            <li><a class="dropdown-item" href="#">Sedes</a></li>
                         </ul>
                     </li>
                     <li class="nav-item active">
@@ -71,7 +71,7 @@
                 <div class="col-md-12">
                     <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0"
                         class="scrollspy-example" tabindex="0">
-                        <h4 id="list-item-1">Index <a href="#"><i class="fa-solid fa-arrow-up"></i></a> </h4>
+                        <h4 id="list-item-1">Index </h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam doloribus ullam minus
                             nostrum,
                             laudantium incidunt soluta rem ex sint voluptatum atque ducimus cum quam magni eius
@@ -95,7 +95,8 @@
                             vitae eveniet libero reprehenderit, incidunt voluptate assumenda quae vel qui. Corporis
                             provident
                             nostrum tempore temporibus dolorem, aut impedit eaque.</p>
-                        <h4 id="list-item-2">Tienda <a href="#"><i class="fa-solid fa-arrow-up"></i></a> </h4>
+                            <p class="text-center"><a href="#"><i class="fa-solid fa-arrow-up"></i></a> </p>
+                        <h4 id="list-item-2">Tienda </h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius libero quaerat id sed
                             nesciunt,
                             dolorum
@@ -131,7 +132,8 @@
                             Veniam quae inventore maxime atque, saepe quo dolorum accusamus hic, consequuntur excepturi
                             voluptatum
                             nam, fuga in.</p>
-                        <h4 id="list-item-3">Contacto <a href="#"><i class="fa-solid fa-arrow-up"></i></a> </h4>
+                            <p class="text-center"><a href="#"><i class="fa-solid fa-arrow-up"></i></a> </p>
+                        <h4 id="list-item-3">Contacto</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aspernatur commodi odit,
                             quaerat
                             velit
@@ -161,7 +163,8 @@
                             aliquid? Error possimus impedit ullam atque, temporibus quod distinctio, inventore provident
                             quibusdam
                             cum fuga expedita saepe nihil magnam sint voluptatem. Nulla ratione repellat blanditiis.</p>
-                        <h4 id="list-item-4">Acceso / Registro <a href="#"><i class="fa-solid fa-arrow-up"></i></a> </h4>
+                            <p class="text-center"><a href="#"><i class="fa-solid fa-arrow-up"></i></a> </p>
+                        <h4 id="list-item-4">Acceso / Registro</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem blanditiis iste molestias
                             at
                             adipisci
@@ -196,6 +199,7 @@
                             sed magni! Saepe reiciendis perspiciatis aliquid officia earum mollitia voluptates maxime
                             illum
                             at.</p>
+                            <p class="text-center"><a href="#"><i class="fa-solid fa-arrow-up"></i></a></p>
                     </div>
                 </div>
             </div>
@@ -203,28 +207,29 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light text-center py-3">
+
+    <footer class="bg-dark text-light py-3 d-flex justify-content-around">
         <div class="container">
             <div class="row">
-                <div class="col-3">2019</div>
-                <div class="col-3">- Todos los derechos reservados -</div>
-                <div class="col-3">
+                <div class="col-12 col-md-4">
+                    <p><i class="fa-solid fa-envelope"></i> info@electricshop.com</p>
+                    <p><i class="fa-solid fa-phone"></i> +123 456 789</p>
+                    <p><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</p>
+                </div>
+
+                <div class="col-12 col-md-4"> 2019 - Todos los derechos reservados - <i class="fa-regular fa-registered"></i></div>
+                
+                <div class="col-12 col-md-4 text-center">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
                 </div>
-                <div class="col-3"><i class="fa-regular fa-registered"></i></div>
             </div>
         </div>
     </footer>
 
 </body>
-<!-- Scripts de Bootstrap y Popper -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
 </html>
