--- a/proyecto2/contacto.html
+++ b/proyecto2/contacto.html
@@ -34,11 +34,13 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                             <li><a class="dropdown-item" href="sobreNosotrosProyecto.html">Proyecto</a></li>
                             <li><a class="dropdown-item" href="#">Equipo</a></li>
-                            <li><a class="dropdown-item" href="#">Sedes</a></li>
                         </ul>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="tienda.html">Tienda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" tabindex="-1" >Contacto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="login.html" tabindex="-1" >Acceso / Registro de Cuenta</a>
@@ -86,29 +88,31 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light text-center py-3">
+
+    <footer class="bg-dark text-light py-3 d-flex justify-content-around">
         <div class="container">
             <div class="row">
-                <div class="col-3">2019</div>
-                <div class="col-3">- Todos los derechos reservados -</div>
-                <div class="col-3">
+                <div class="col-12 col-md-4">
+                    <p><i class="fa-solid fa-envelope"></i> info@electricshop.com</p>
+                    <p><i class="fa-solid fa-phone"></i> +123 456 789</p>
+                    <p><i class="fa-solid fa-map-marker-alt"></i> Dirección, Ciudad, País</p>
+                </div>
+
+                <div class="col-12 col-md-4"> 2019 - Todos los derechos reservados - <i class="fa-regular fa-registered"></i></div>
+                
+                <div class="col-12 col-md-4 text-center">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
                 </div>
-                <div class="col-3"><i class="fa-regular fa-registered"></i></div>
             </div>
         </div>
     </footer>
 
-    <!-- Scripts de Bootstrap y Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
-
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
+
 
 </html>
